--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,16 +1,215 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
+}
+
+
+img {
+    width: 100%;
+}
+
+
 .container {
-    width: 1260px;
+    max-width: 1060px;
+    width: 100%;
     margin: 0 auto;
 }
 
 .header {
-    padding: 15px;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #dedede;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
 }
 
-.header__logo {
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 15px;
+
+    &__logo {
+        font-size: 1.3rem;
+        color: #000;
+    }
+
+    &__basket {
+        font-size: 1.3rem;
+        cursor: pointer;
+    }
 }
-.fa-solid {
+
+.cart {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    min-height: 100vh;
+    width: 360px;
+    background: #e7e7e7;
+    border-left: 1px solid #b4b4b4;
+    padding: 20px;
+    transition: .3s;
+
+    
+    &__title {
+        text-align: center;
+        font-weight: 500;
+        font-size: 1.5rem;
+        margin-top: 2rem;
+    }
+
+    &__box {
+        display: grid;
+        grid-template-columns: 32% 50% 18%;
+        align-items: center;
+        gap: 1rem;
+        margin-top: 1rem;
+    }
+
+    &__details {
+        display: grid;
+        row-gap: 0.5rem;
+    }
+
+    &__product-title {
+        font-size: 1.5rem;
+        text-transform: uppercase;
+    }
+
+    &__price {
+        font-weight: 500;
+    }
+
+    &__quantity {
+        border: 1px solid black;
+        outline-color: black;
+        width: 2rem;
+        padding: 3px 0 0 3px;
+        text-align: center;
+    }
+
+    &__remove {
+        font-size: 20px;
+        cursor: pointer;
+
+        &:hover {
+            transition: all .1s ease-in;
+            color: red;
+        }
+    }
+
+    &__img {
+        width: 100px;
+        height: 100px;
+        object-fit: contain;
+        padding: 10px;
+    }
+
+    &__buy {
+        display: flex;
+        margin: 1.5rem auto 0 auto;
+        padding: 12px 20px;
+        border: none;
+        background-color: #000;
+        color: #fff;
+
+        &:hover {
+            filter: brightness(55%);
+        }
+    }
+
+    &__close {
+        position: absolute;
+        top: 1rem;
+        right: 0.8rem;
+        cursor: pointer;
+        color: #000;
+    }
+
+    .total {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 1.5rem;
+        border-top: 1px solid black;
+        padding-top: 0.25rem;
+
+        &__title {
+            font-size: 1rem;
+            font-weight: 600;
+            margin-right: 0.5rem;
+        }
+    }
 }
-.fa-basket-shopping {
+
+
+
+.shop {
+    padding: 4rem 1rem 3rem;
+    &__title {
+        margin: 2rem 0;
+        text-align: center;
+        font-weight: 500;
+    }
+
+    &-content {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(220px, auto));
+        gap: 1.5rem;
+    }
+
+    &-card {
+        position: relative;
+        transition: all 0.3s ease-out;
+
+        &:hover {
+            padding: 10px;
+            outline: 1px solid black;
+        }
+
+        &__img {
+            width: 100%;
+            height: auto;
+            margin-bottom: 0.5rem;
+        }
+
+        &__title {
+            font-size: 1.2rem;
+            font-weight: 500;
+            text-transform: uppercase;
+            margin-bottom: 0.5rem;
+        }
+
+        &__price {
+            font-weight: 500;
+        }
+
+        &__basket {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            padding: 10px;
+            background: #000;
+            color: #fff;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #4b1b4b;
+            }
+        }
+    }
+}
+
+
+.cart.active {
+    right: 0;
 }
