--- a/styles/main.css
+++ b/styles/main.css
@@ -144,6 +144,24 @@ img {
   grid-template-columns: repeat(auto-fit, minmax(220px, auto));
   gap: 1.5rem;
 }
+.shop__more {
+  text-align: center;
+  margin-top: 3rem;
+}
+.shop__more-btn {
+  outline: 1px solid black;
+  border: none;
+  padding: 10px;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  background-color: #fff;
+  transition: 0.2s;
+  cursor: pointer;
+}
+.shop__more-btn:hover {
+  background: #000;
+  color: #fff;
+}
 .shop-card {
   position: relative;
   transition: all 0.3s ease-out;
