--- a/styles/main.scss
+++ b/styles/main.scss
@@ -167,6 +167,27 @@ img {
         gap: 1.5rem;
     }
 
+    &__more {
+        text-align: center;
+        margin-top: 3rem;
+
+        &-btn {
+            outline: 1px solid black;
+            border: none;
+            padding: 10px;
+            text-transform: uppercase;
+            font-size: 1.2rem;
+            background-color: #fff;
+            transition: .2s;
+            cursor: pointer;
+
+            &:hover {
+                background: #000;
+                color: #fff;
+            }
+        }
+    }
+
     &-card {
         position: relative;
         transition: all 0.3s ease-out;
